map integration and searching

--- a/services/web/src/components/NavBar/NavBar.css
+++ b/services/web/src/components/NavBar/NavBar.css
@@ -28,3 +28,13 @@ a.navbar-signin {
 .navbar-toggler {
   display: inline-block;
 }
+
+.geocoder {
+  position:absolute;
+  z-index:1;
+  width:50%;
+  left:50%;
+  margin-left:-25%;
+  top:20px;
+}
+.mapboxgl-ctrl-geocoder { min-width:100%; }
