--- a/services/web/src/components/Map/Map.css
+++ b/services/web/src/components/Map/Map.css
@@ -20,12 +20,12 @@
 
 
 .geocoder {
-  position:absolute;
-  z-index:1;
+  position:inline;
+  /* z-index:1;
   width:50%;
   left:50%;
   margin-left:-25%;
-  top:120px;
+  top:120px; */
 }
 .mapboxgl-ctrl-geocoder { min-width:100%; }
 
