--- a/services/web/src/components/Map/Map.css
+++ b/services/web/src/components/Map/Map.css
@@ -1,10 +1,18 @@
 #map-container {
-  position: absolute;
+  position: relative;
   top: 0;
   bottom: 0;
   left: 0;
+  height: 95vh;
   width: 100%;
-  z-index: -1;
+  z-index: 0;
+}
+
+#drawer{
+  bottom: 0;
+  position: absolute;
+  width: 100vw;
+  background-color: white;
 }
 
 #location-describe {
